--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -188,7 +188,7 @@
     </android.support.v7.widget.CardView>
 
     <FrameLayout
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_next_lecturer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="4dp"
