--- a/app/src/main/res/layout/scene_type_student_details.xml
+++ b/app/src/main/res/layout/scene_type_student_details.xml
@@ -63,10 +63,10 @@
         tools:layout_constraintTop_creator="1"/>
 
     <Button
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_next_student"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -76,7 +76,7 @@
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.FontPath.Medium"
         android:textColor="@drawable/btn_next_text"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -108,7 +108,7 @@
         android:layout_marginTop="8dp"
         android:text="Lecturer"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/btn_next"
+        app:layout_constraintBottom_toTopOf="@+id/btn_next_lecturer"
         app:layout_constraintHorizontal_bias="0.181"
         app:layout_constraintLeft_toLeftOf="@+id/lecturer"
         app:layout_constraintRight_toRightOf="@+id/lecturer"
@@ -126,7 +126,7 @@
         android:text="Not Sure yet?"
         android:textAppearance="@style/TextAppearance.FontPath.Medium"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/btn_next"
+        app:layout_constraintBottom_toTopOf="@+id/btn_next_lecturer"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView21"/>
