--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="card_view_content_margin">4dp</dimen>
     <dimen name="material_in_anim_slide_offset">16dp</dimen>
     <dimen name="material_in_delay_denominator">1.35dp</dimen>
+    <dimen name="check_margin">25dp</dimen>
 </resources>
