--- a/app/src/main/res/drawable/ripple_white.xml
+++ b/app/src/main/res/drawable/ripple_white.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="@android:color/white"
+        android:color="@android:color/background_light"
         android:radius="100dp">
 
 </ripple>
