--- a/app/src/main/res/layout/activity_choose_type.xml
+++ b/app/src/main/res/layout/activity_choose_type.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/root"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/Emerald_flat"
               android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/root_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="6"
-        tools:context="com.rumaan.academapp.activities.ChooseTypeActivity">
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/header_text_who"
             fontPath="fonts/medium.ttf"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="24dp"
+            android:layout_centerInParent="true"
             android:text="Who are you?"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="28sp"
             tools:ignore="MissingPrefix"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/root_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        tools:context="com.rumaan.academapp.activities.ChooseTypeActivity">
 
         <TextView
             android:id="@+id/desc_choose_type"
@@ -33,7 +38,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/choose_view"
-            android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
@@ -126,17 +130,39 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="I am Student"/>
 
-    <Button
+    <FrameLayout
+        android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/Asphalt_grey"/>
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_weight="0.8"
+        android:background="@color/Emerald_flat"
+        android:clickable="false">
+
+        <View
+            android:id="@+id/mask_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_rounded_white"
+            android:elevation="5dp"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/btn_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:elevation="6dp"
+            android:text="Next"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.FontPath.Medium"
+            android:textColor="@color/Emerald_flat"
+            android:visibility="invisible"/>
+    </FrameLayout>
 </LinearLayout>
 
 
