--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    android:orientation="vertical"
-    tools:ignore="MissingPrefix">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/root_view"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:animateLayoutChanges="true"
+              android:orientation="vertical"
+              tools:ignore="MissingPrefix"
+              tools:visibility="visible">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_details"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2.6"
@@ -23,14 +25,14 @@
             android:layout_gravity="center_horizontal"
             android:elevation="1dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/bg_grey" />
+            android:src="@drawable/bg_grey"/>
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop"
-            android:src="@drawable/college_reading" />
+            android:src="@drawable/college_reading"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -43,7 +45,7 @@
             android:text="College Details"
             android:textColor="@android:color/background_light"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
 
         <TextView
@@ -58,7 +60,7 @@
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
 
     </android.support.v7.widget.CardView>
@@ -72,123 +74,128 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="5"
+        android:focusableInTouchMode="true"
         app:cardBackgroundColor="@android:color/background_light"
         app:cardCornerRadius="2dp"
         app:cardElevation="4dp"
         app:cardMaxElevation="4dp">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="8dp">
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/college_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:padding="4dp"
-                android:theme="@style/TextInputLayoutTheme"
-                app:errorTextAppearance="@style/TextInputLayoutTheme.ErrorAppearance"
-                app:hintEnabled="true"
-                app:hintTextAppearance="@style/TextInputLayoutTheme.HintAppearance">
-
-                <EditText
-                    fontPath="fonts/regular.ttf"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="College Name"
-                    android:maxLines="4"
-                    android:scrollbars="vertical"
-                    android:textColor="@color/Asphalt_grey"
-                    android:textSize="@dimen/edit_text_size" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/usn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/card_view_content_margin"
-                android:padding="@dimen/card_view_content_padding"
-                android:theme="@style/TextInputLayoutTheme"
-                app:counterEnabled="true"
-                app:counterMaxLength="10"
-                app:errorTextAppearance="@style/TextInputLayoutTheme.ErrorAppearance"
-                app:hintEnabled="true"
-                app:hintTextAppearance="@style/TextInputLayoutTheme.HintAppearance">
-
-                <EditText
-                    fontPath="fonts/regular.ttf"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="USN"
-                    android:inputType="textCapCharacters"
-                    android:maxLength="10"
-                    android:maxLines="1"
-                    android:textColor="@color/Asphalt_grey"
-                    android:textSize="@dimen/edit_text_size" />
-            </android.support.design.widget.TextInputLayout>
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/card_view_content_margin"
-                android:layout_marginStart="@dimen/card_view_content_margin"
-                android:layout_marginTop="4dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="8dp">
 
-                <TextView
-                    android:layout_width="0dp"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/college_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_weight="1"
-                    android:paddingEnd="4dp"
-                    android:paddingStart="4dp"
-                    android:text="Year"
-                    android:textAlignment="textStart"
-                    android:textAppearance="@style/TextAppearance.FontPath.Regular"
-                    android:textColor="@color/Asphalt_grey" />
+                    android:layout_margin="4dp"
+                    android:padding="4dp"
+                    android:theme="@style/TextInputLayoutTheme"
+                    app:errorTextAppearance="@style/TextInputLayoutTheme.ErrorAppearance"
+                    app:hintEnabled="true"
+                    app:hintTextAppearance="@style/TextInputLayoutTheme.HintAppearance">
 
-                <TextView
-                    android:layout_width="0dp"
+                    <EditText
+                        fontPath="fonts/regular.ttf"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="College Name"
+                        android:maxLines="4"
+                        android:scrollbars="vertical"
+                        android:textColor="@color/Asphalt_grey"
+                        android:textSize="@dimen/edit_text_size"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/usn"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_weight="2"
-                    android:paddingEnd="4dp"
-                    android:paddingStart="4dp"
-                    android:text="Course"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/Asphalt_grey" />
+                    android:layout_margin="@dimen/card_view_content_margin"
+                    android:padding="@dimen/card_view_content_padding"
+                    android:theme="@style/TextInputLayoutTheme"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="10"
+                    app:errorTextAppearance="@style/TextInputLayoutTheme.ErrorAppearance"
+                    app:hintEnabled="true"
+                    app:hintTextAppearance="@style/TextInputLayoutTheme.HintAppearance">
+
+                    <EditText
+                        fontPath="fonts/regular.ttf"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="USN"
+                        android:inputType="textCapCharacters"
+                        android:maxLength="10"
+                        android:maxLines="1"
+                        android:textColor="@color/Asphalt_grey"
+                        android:textSize="@dimen/edit_text_size"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/card_view_content_margin"
+                    android:layout_marginStart="@dimen/card_view_content_margin"
+                    android:layout_marginTop="4dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_weight="1"
+                        android:paddingEnd="4dp"
+                        android:paddingStart="4dp"
+                        android:text="Year"
+                        android:textAlignment="textStart"
+                        android:textAppearance="@style/TextAppearance.FontPath.Regular"
+                        android:textColor="@color/Asphalt_grey"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_weight="2"
+                        android:paddingEnd="4dp"
+                        android:paddingStart="4dp"
+                        android:text="Course"
+                        android:textAlignment="textStart"
+                        android:textColor="@color/Asphalt_grey"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/card_view_content_margin"
+                    android:layout_marginEnd="@dimen/card_view_content_margin"
+                    android:layout_marginStart="@dimen/card_view_content_margin"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/card_view_content_padding">
+
+                    <Spinner
+                        android:id="@+id/year_spinner"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"/>
+
+                    <Spinner
+                        android:id="@+id/course_spinner"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"/>
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/card_view_content_margin"
-                android:layout_marginEnd="@dimen/card_view_content_margin"
-                android:layout_marginStart="@dimen/card_view_content_margin"
-                android:orientation="horizontal"
-                android:padding="@dimen/card_view_content_padding">
-
-                <Spinner
-                    android:id="@+id/year_spinner"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-
-                <Spinner
-                    android:id="@+id/course_spinner"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2" />
-            </LinearLayout>
-        </LinearLayout>
-
+        </ScrollView>
     </android.support.v7.widget.CardView>
 
     <FrameLayout
-        android:id="@+id/btn_next_lecturer"
+        android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="4dp"
@@ -208,7 +215,7 @@
             android:text="Next"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.FontPath.Medium"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"/>
 
         <View
             android:id="@+id/mask_view"
@@ -217,7 +224,7 @@
             android:layout_gravity="center"
             android:background="@color/Emerald_flat"
             android:elevation="5dp"
-            android:visibility="invisible" />
+            android:visibility="invisible"/>
 
         <ImageView
             android:id="@+id/img_check"
@@ -228,7 +235,7 @@
             android:elevation="5dp"
             android:scaleType="centerInside"
             android:src="@drawable/ic_check"
-            android:tint="@android:color/white" />
+            android:tint="@android:color/white"/>
 
     </FrameLayout>
 </LinearLayout>
