--- a/app/src/main/res/layout/scene_type_student_details.xml
+++ b/app/src/main/res/layout/scene_type_student_details.xml
@@ -108,7 +108,7 @@
         android:layout_marginTop="8dp"
         android:text="Lecturer"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/btn_next_lecturer"
+        app:layout_constraintBottom_toTopOf="@+id/btn_next"
         app:layout_constraintHorizontal_bias="0.181"
         app:layout_constraintLeft_toLeftOf="@+id/lecturer"
         app:layout_constraintRight_toRightOf="@+id/lecturer"
@@ -126,7 +126,7 @@
         android:text="Not Sure yet?"
         android:textAppearance="@style/TextAppearance.FontPath.Medium"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/btn_next_lecturer"
+        app:layout_constraintBottom_toTopOf="@+id/btn_next"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView21"/>
