--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -1,17 +1,14 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.rumaan.academapp.fragments.ForumFragment">
 
-    <FrameLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/forum_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.rumaan.academapp.fragments.ForumFragment">
-
-        <TextView
-            android:id="@+id/test_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Forum Fragment"
-            android:textSize="24sp"/>
-    </FrameLayout>
-</layout>
+        android:padding="8dp"
+        />
+</FrameLayout>
