--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -1,5 +1,6 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,5 +10,19 @@
         android:id="@+id/forum_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add_forum_post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="18dp"
+        android:clickable="true"
+        android:src="@drawable/ic_add_black_24dp"
+        app:elevation="6dp"
+        app:fabSize="auto"
+        app:pressedTranslationZ="4dp"
+        app:rippleColor="@color/Emerald_flat"
         />
 </FrameLayout>
